# libfcc-rust

./: .gitignore  Cargo.toml  config.yaml  default.nix  flake.nix  shell.nix
src/: .libfcc_sql.rs.swp  config.rs  data.rs  get_uls.rs  libfcc_config.rs  libfcc_data.rs  libfcc_get_uls.rs  libfcc_parse.rs  libfcc_sql.rs  libfcc_unzip_uls.rs  main.rs  parse.rs  sql.rs  unzip_uls.rs
