[package]
name = "libfcc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "*"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
mysql = "24.0.0"
rayon = "1.8.1"
futures-util = "0.3.30"
indicatif = "0.17.7"
reqwest = { version = "0.11.23", features = ["stream"] }
tokio = { version = "1.35.1", features = ["full"] }
zip = "0.6.6"

[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
overflow-checks = true
lto = "fat"
panic = "unwind"
