[package]
name = "libfcc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "*"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
mysql = "26.0.0"
rayon = "1.10.0"
futures-util = "0.3.31"
indicatif = "0.17.11"
reqwest = { version = "0.12.20", features = ["stream"] }
tokio = { version = "1.45.1", features = ["full"] }
zip = "4.1.0"

[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
overflow-checks = true
lto = "fat"
panic = "unwind"
