[package]
name = "libfcc-rust"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "*"
serde = { version = ">=1.0.228", features = ["derive"] }
serde_json = ">=1.0.145"
serde_yaml = ">=0.9.34"
mysql = ">=26.0.1"
rayon = ">=1.11.0"
futures-util = ">=0.3.31"
indicatif = ">=0.13.3"
reqwest = { version = ">=0.12.24", features = ["stream"] }
tokio = { version = ">=1.48.0", features = ["full"] }
zip = ">=6.0.0"

[profile.release]
opt-level = 3
debug = 0
strip = "symbols"
overflow-checks = true
lto = "fat"
panic = "unwind"
